--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
       <li><a href="labs/HTML/exercise 4-1/index.html" target="_blank"> Exercise 4-1 </a></li>
       <li><a href="labs/HTML/exercise 4-2/index.html" target="_blank"> Exercise 4-2 </a></li>
       <li><a href="labs/HTML/exercise 4-3/index.html" target="_blank"> Exercise 4-3 </a></li>
-      <li><a href="labs/HTML/exercisen4-4/index.html" target="_blank"> Exercise 4-4 </a></li>
+      <li><a href="labs/HTML/exercise 4-4/index.html" target="_blank"> Exercise 4-4 </a></li>
     </ol>
 
     <h3>Chương 5</h3>
