--- a/index.html
+++ b/index.html
@@ -2,11 +2,14 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8">
-    <title>Learn Web Design</title>
+    <title>Web Design</title>
     <h1>Tong hop cac bai lab</h1>
-    <h2>Bai lab ve HTML</h2>
 
-    <h3>Chương 4</h3>
+    <h2>1911213 | Phan Thị Hoài Thương</h2>
+
+    <h3>Bai lab ve HTML</h3>
+
+    <h4>Chương 4</h4>
     <ol>
       <li><a href="labs/HTML/exercise 4-1/index.html" target="_blank"> Exercise 4-1 </a></li>
       <li><a href="labs/HTML/exercise 4-2/index.html" target="_blank"> Exercise 4-2 </a></li>
@@ -14,25 +17,25 @@
       <li><a href="labs/HTML/exercise 4-4/index.html" target="_blank"> Exercise 4-4 </a></li>
     </ol>
 
-    <h3>Chương 5</h3>
+    <h4>Chương 5</h4>
     <ol>
       <li><a href="labs/HTML/exercise 5-1/index.html" target="_blank"> Exercise 5-1 </a></li>
       <li><a href="labs/HTML/exercise 5-2/index.html" target="_blank"> Exercise 5-2 </a></li>
       <li><a href="labs/HTML/exercise 5-3/index.html" target="_blank"> Exercise 5-3 </a></li>
     </ol>
 
-    <h3>Chương 6</h3>
+    <h4>Chương 6</h4>
     <ol>
       <li><a href="labs/HTML/exercise 6-1 to 6-7/jenskitchen/index.html" target="_blank"> Exercise 6-1 to 6-7</a></li>
       <li><a href="labs/HTML/exercise 6-8/materials/glossary.html" target="_blank"> Exercise 6-8 </a></li>
     </ol>
 
-    <h3>Chương 7</h3>
+    <h4>Chương 7</h4>
     <ol>
       <li><a href="labs/HTML/exercise 7-1/tuscany/index.html" target="_blank"> Exercise 7-1 </a></li>
     </ol>
 
-    <h3>Chương 8</h3>
+    <h4>Chương 8</h4>
     <ol>
       <li><a href="labs/HTML/exercise 8-1/simple table.html" target="_blank"> Exercise 8-1 </a></li>
       <li><a href="labs/HTML/exercise 8-2/Column spans.html" target="_blank"> Exercise 8-2 </a></li>
@@ -40,7 +43,7 @@
       <li><a href="labs/HTML/exercise 8-4/table.html" target="_blank"> Exercise 8-4 </a></li>
     </ol>
 
-    <h3>Chương 9</h3>
+    <h4>Chương 9</h4>
     <ol>
       <li><a href="labs/HTML/exercise 9-1 to 9-4/contest_entry.html" target="_blank"> Exercise 9-1 to 9-4</a></li>
   </body>
