Bo sung bai lab

--- a/index.html
+++ b/index.html
@@ -7,8 +7,19 @@
 
     <h2>1911213 | Phan Thị Hoài Thương</h2>
 
+    <h3>Lab Domain name/Hosing</h3>
+     <ul>
+      <li>
+        <a
+          href="https://docs.google.com/document/d/1KntCP7USZoiYHaG2anx36jwmpk3fLnPLXX614EzkgdA/edit"
+          target="_blank"
+          >Lab 1 - Lab 9
+        </a>
+      </li>
+    </ul>
+
     <h3>Bai lab ve HTML</h3>
-    
+
     <h4>Chương 4</h4>
     <ol>
       <li><a href="labs/HTML/exercise 4-1/index.html" target="_blank"> Exercise 4-1 </a></li>
