Chinh sua bai lab

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 
     <h2>1911213 | Phan Thị Hoài Thương</h2>
 
-    <h3>Lab Domain name/Hosing</h3>
+    <h3><em>Lab Domain name/Hosing<em></h3>
      <ul>
       <li>
         <a
