Bo sung chuong 12

--- a/index.html
+++ b/index.html
@@ -67,5 +67,16 @@
       <li><a href="labs/CSS/exercise 11-2/twenties.html" target="_blank"> Exercise 11-2 </a></li>
     </ol>
 
+     <h4>Chương 12</h4>
+    <ol>
+      <li><a href="labs/CSS/exercise 12-1/menu.html" target="_blank"> Exercise 12-1 </a></li>
+      <li><a href="labs/CSS/exercise 12-2/menu.html" target="_blank"> Exercise 12-2 </a></li>
+      <li><a href="labs/CSS/exercise 12-3/menu.html" target="_blank"> Exercise 12-3 </a></li>
+      <li><a href="labs/CSS/exercise 12-4/menu.html" target="_blank"> Exercise 12-4 </a></li>
+      <li><a href="labs/CSS/exercise 12-5/menu.html" target="_blank"> Exercise 12-5 </a></li>
+      <li><a href="labs/CSS/exercise 12-6/menu.html" target="_blank"> Exercise 12-6 </a></li>
+      <li><a href="labs/CSS/exercise 12-7/menu.html" target="_blank"> Exercise 12-7 </a></li>
+    </ol>
+
   </body>
 </html>
