Chinh sua trang web

--- a/index.html
+++ b/index.html
@@ -1,74 +1,73 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
+<head>
     <meta charset="UTF-8">
     <title>Web Design</title>
+    
+    <link rel="stylesheet" href="labs/CSS/app.css">
+</head>
+  <body>
+  	
     <h1>Tong hop cac bai lab</h1>
 
     <h2>1911213 | Phan Thị Hoài Thương</h2>
 
-    <h3><em>Lab Domain name/Hosing<em></h3>
-     <ul>
-      <li>
-        <a
-          href="https://docs.google.com/document/d/1KntCP7USZoiYHaG2anx36jwmpk3fLnPLXX614EzkgdA/edit"
-          target="_blank"
-          >Lab 1 - Lab 9
-        </a>
-      </li>
+    <h3>Lab Domain name/Hosing</h3>
+    <ul>
+      <li><a href="https://docs.google.com/document/d/1KntCP7USZoiYHaG2anx36jwmpk3fLnPLXX614EzkgdA/edit" target="_blank"> Lab 1 - Lab9 </a></li>
     </ul>
 
     <h3>Bai lab ve HTML</h3>
 
     <h4>Chương 4</h4>
-    <ol>
+    <ul>
       <li><a href="labs/HTML/exercise 4-1/index.html" target="_blank"> Exercise 4-1 </a></li>
       <li><a href="labs/HTML/exercise 4-2/index.html" target="_blank"> Exercise 4-2 </a></li>
       <li><a href="labs/HTML/exercise 4-3/index.html" target="_blank"> Exercise 4-3 </a></li>
       <li><a href="labs/HTML/exercise 4-4/index.html" target="_blank"> Exercise 4-4 </a></li>
-    </ol>
+    </ul>
 
     <h4>Chương 5</h4>
-    <ol>
+    <ul>
       <li><a href="labs/HTML/exercise 5-1/index.html" target="_blank"> Exercise 5-1 </a></li>
       <li><a href="labs/HTML/exercise 5-2/index.html" target="_blank"> Exercise 5-2 </a></li>
       <li><a href="labs/HTML/exercise 5-3/index.html" target="_blank"> Exercise 5-3 </a></li>
-    </ol>
+    </ul>
 
     <h4>Chương 6</h4>
-    <ol>
+    <ul>
       <li><a href="labs/HTML/exercise 6-1 to 6-7/jenskitchen/index.html" target="_blank"> Exercise 6-1 to 6-7</a></li>
       <li><a href="labs/HTML/exercise 6-8/materials/glossary.html" target="_blank"> Exercise 6-8 </a></li>
-    </ol>
+    </ul>
 
     <h4>Chương 7</h4>
-    <ol>
+    <ul>
       <li><a href="labs/HTML/exercise 7-1/tuscany/index.html" target="_blank"> Exercise 7-1 </a></li>
-    </ol>
+    </ul>
 
     <h4>Chương 8</h4>
-    <ol>
+    <ul>
       <li><a href="labs/HTML/exercise 8-1/simple table.html" target="_blank"> Exercise 8-1 </a></li>
       <li><a href="labs/HTML/exercise 8-2/Column spans.html" target="_blank"> Exercise 8-2 </a></li>
       <li><a href="labs/HTML/exercise 8-3/Row spans.html" target="_blank"> Exercise 8-3 </a></li>
       <li><a href="labs/HTML/exercise 8-4/table.html" target="_blank"> Exercise 8-4 </a></li>
-    </ol>
+    </ul>
 
     <h4>Chương 9</h4>
-    <ol>
+    <ul>
       <li><a href="labs/HTML/exercise 9-1 to 9-4/contest_entry.html" target="_blank"> Exercise 9-1 to 9-4</a></li>
-    </ol>
+    </ul>
 
     <h3>Bai lab ve CSS</h3>
 
     <h4>Chương 11</h4>
-    <ol>
+    <ul>
       <li><a href="labs/CSS/exercise 11-1/twenties.html" target="_blank"> Exercise 11-1 </a></li>
       <li><a href="labs/CSS/exercise 11-2/twenties.html" target="_blank"> Exercise 11-2 </a></li>
-    </ol>
+    </ul>
 
      <h4>Chương 12</h4>
-    <ol>
+    <ul>
       <li><a href="labs/CSS/exercise 12-1/menu.html" target="_blank"> Exercise 12-1 </a></li>
       <li><a href="labs/CSS/exercise 12-2/menu.html" target="_blank"> Exercise 12-2 </a></li>
       <li><a href="labs/CSS/exercise 12-3/menu.html" target="_blank"> Exercise 12-3 </a></li>
@@ -76,7 +75,7 @@
       <li><a href="labs/CSS/exercise 12-5/menu.html" target="_blank"> Exercise 12-5 </a></li>
       <li><a href="labs/CSS/exercise 12-6/menu.html" target="_blank"> Exercise 12-6 </a></li>
       <li><a href="labs/CSS/exercise 12-7/menu.html" target="_blank"> Exercise 12-7 </a></li>
-    </ol>
+    </ul>
 
   </body>
 </html>
