--- a/index.html
+++ b/index.html
@@ -4,7 +4,10 @@
     <meta charset="UTF-8">
     <title>Web Design</title>
     
-    <link rel="stylesheet" href="labs/CSS/app.css">
+    <link rel="stylesheet" href="labs/source/app.css">
+    <audio controls autoplay>
+    <source src="labs/source/uta.mp3" type="audio/mpeg">
+</audio>
 </head>
   <body>
   	
