Bo sung bai lab

--- a/index.html
+++ b/index.html
@@ -80,5 +80,18 @@
       <li><a href="labs/CSS/exercise 12-7/menu.html" target="_blank"> Exercise 12-7 </a></li>
     </ul>
 
+    <h4>Chương 13</h4>
+    <ul>
+      <li><a href="labs/CSS/exercise 13-1/bistro.html" target="_blank"> Exercise 13-1 </a></li>
+      <li><a href="labs/CSS/exercise 13-2/bistro.html" target="_blank"> Exercise 13-2 </a></li>
+      <li><a href="labs/CSS/exercise 13-3/bistro.html" target="_blank"> Exercise 13-3 </a></li>
+      <li><a href="labs/CSS/exercise 13-4/bistro.html" target="_blank"> Exercise 13-4 </a></li>
+      <li><a href="labs/CSS/exercise 13-4/bistro_.html" target="_blank"> Exercise 13-4b</a></li>
+      <li><a href="labs/CSS/exercise 13-5/bistro.html" target="_blank"> Exercise 13-5 </a></li>
+      <li><a href="labs/CSS/exercise 13-6/bistro.html" target="_blank"> Exercise 13-6 </a></li>
+      <li><a href="labs/CSS/exercise 13-7/bistro.html" target="_blank"> Exercise 13-7 </a></li>
+      <li><a href="labs/CSS/exercise 13-8/bistro.html" target="_blank"> Exercise 13-8 </a></li>
+    </ul>
+
   </body>
 </html>
