--- a/labs/CSS/exercise 13-2/bistro.html
+++ b/labs/CSS/exercise 13-2/bistro.html
@@ -12,7 +12,7 @@ body {
   line-height: 175%;
   margin: 0 15%;
   background-color: #d2dc9d;
-  background-image: url(labs/CSS/images/bullseye.png);
+  background-image: url(bullseye.png);
 }
 #header {
   margin-top: 0;
