--- a/labs/CSS/exercise 13-3/bistro.html
+++ b/labs/CSS/exercise 13-3/bistro.html
@@ -13,14 +13,14 @@ body {
   line-height: 175%;
   margin: 0 15%;
   background-color: #d2dc9d;
-  background-image: url(labs/CSS/images/bullseye.png);
+  background-image: url(bullseye.png);
 }
 #header {
   margin-top: 0;
   padding: 3em 1em 2em 1em;
   text-align: center;
   background-color: rgba(255,255,255,.5);
-  background-image: url(labs/CSS/images/purpledot.png);
+  background-image: url(purpledot.png);
   background-repeat: repeat-x;
 }
 a {
