--- a/labs/CSS/exercise 13-4/bistro_.html
+++ b/labs/CSS/exercise 13-4/bistro_.html
@@ -13,9 +13,9 @@ body {
   line-height: 175%;
   margin: 0 15%;
   background-color: #d2dc9d;
-  /* background-image: url(images/bullseye.png);
+  /* background-image: url(bullseye.png);
   background-position: center 200px; */
-  background-image: url(labs/CSS/images/blackgoose.png);
+  background-image: url(blackgoose.png);
   background-repeat: no-repeat;
   background-position: center 100px;
 }
@@ -24,7 +24,7 @@ body {
   padding: 3em 1em 2em 1em;
   text-align: center;
   background-color: rgba(255,255,255,.5);
-  background-image: url(labs/CSS/images/purpledot.png);
+  background-image: url(purpledot.png);
   background-repeat: repeat-x;
   background-position: center top;
 }
