--- a/labs/CSS/exercise 13-5/bistro.html
+++ b/labs/CSS/exercise 13-5/bistro.html
@@ -13,7 +13,7 @@ body {
   line-height: 175%;
   margin: 0 15%;
   background-color: #d2dc9d;
-  background-image: url(labs/CSS/images/blackgoose.png);
+  background-image: url(blackgoose.png);
   background-repeat: no-repeat;
   background-position: center 100px;
   background-attachment: fixed;
@@ -23,7 +23,7 @@ body {
   padding: 3em 1em 2em 1em;
   text-align: center;
   background-color: rgba(255,255,255,.5);
-  background-image: url(labs/CSS/images/purpledot.png);
+  background-image: url(purpledot.png);
   background-repeat: repeat-x;
   background-position: center top;
 }
