--- a/index.html
+++ b/index.html
@@ -90,6 +90,11 @@
       <li><a href="labs/CSS/exercise 13-7/bistro.html" target="_blank"> Exercise 13-7 </a></li>
       <li><a href="labs/CSS/exercise 13-8/bistro.html" target="_blank"> Exercise 13-8 </a></li>
     </ul>
-
+    
+    <h4>Mini Project</h4>
+    <ul>
+    	<li><a href="mimi project/mini project 1/index.html" target="_blank"> Mini Project 1</a></li>
+    </ul>
+    
   </body>
 </html>
