Bo sung mini project 1

--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
     
     <h4>Mini Project</h4>
     <ul>
-    	<li><a href="mimi project/mini project 1/index.html" target="_blank"> Mini Project 1</a></li>
+    	<li><a href="mini project/mini project 1/index.html" target="_blank"> Mini Project 1</a></li>
     </ul>
     
   </body>
