Bo sung chuong 14

--- a/index.html
+++ b/index.html
@@ -91,6 +91,13 @@
       <li><a href="labs/CSS/exercise 13-8/bistro.html" target="_blank"> Exercise 13-8 </a></li>
     </ul>
     
+    <h4>Chương 14</h4>
+    <ul>
+    	<li><a href="labs/CSS/exercise 14-1/jenware.html" target="_blank"> Exercise 14-1 </a></li>
+    	<li><a href="labs/CSS/exercise 14-2/jenware.html" target="_blank"> Exercise 14-2 </a></li>
+    	<li><a href="labs/CSS/exercise 14-3/jenware.html" target="_blank"> Exercise 14-3 </a></li>
+    </ul>
+
     <h4>Mini Project</h4>
     <ul>
     	<li><a href="mini project/mini project 1/index.html" target="_blank"> Mini Project 1</a></li>
