--- a/index.html
+++ b/index.html
@@ -111,6 +111,15 @@
     	<li><a href="labs/CSS/exercise 14-3/jenware.html" target="_blank"> Exercise 14-3 </a></li>
     </ul>
 
+    <h3>Chương 15</h3>
+    <ul>
+      <li><a href="labs/CSS/exercise 15-1/jenware.html" target="_blank"> Exercise 15-1 </a></li>
+      <li><a href="labs/CSS/exercise 15-1/jenware.html" target="_blank"> Exercise 15-2 </a></li>
+      <li><a href="labs/CSS/exercise 15-1/jenware.html" target="_blank"> Exercise 15-3 </a></li>
+      <li><a href="labs/CSS/exercise 15-1/jenware.html" target="_blank"> Exercise 15-4 </a></li>
+      <li><a href="labs/CSS/exercise 15-1/jenware.html" target="_blank"> Exercise 15-5 </a></li>
+    </ul>
+    
     <h2>Mini Project</h2>
     <ul>
     	<li><a href="mini project/mini project 1/index.html" target="_blank"> Mini Project 1</a></li>
