--- a/index.html
+++ b/index.html
@@ -5,125 +5,49 @@
     <title>Web Design</title>
     
     <link rel="stylesheet" href="source\app.css">
-     <link href="source\fontawesome-free-5.13.0-web\css\all.css" rel="stylesheet">
+    <link rel="stylesheet" href="source\swiper.min.css">
+   <link href="source\fontawesome-free-5.13.0-web\css\all.css" rel="stylesheet">
+
 </head>
 <body>
-  <div id="menu-icon">
-    <ul>
-        <li><a href="https://www.facebook.com/profile.php?id=100009683530046" target="_blank"><i class="fab fa-facebook-f"></i></a></li>
-        <li><a href="https://www.instagram.com/_tipth/" target="_blank"><i class="fab fa-instagram"></i></a></li>
-        <li><a href="https://github.com/Hoaithuong1510" target="_blank"><i class="fab fa-github"></i></a></li>
-    </ul>
+  <h2>
+    <span>S</span>
+    <span>O</span>
+    <span>M</span>
+    <span>A</span>
+    <span>L</span>
+    <span>I</span>
+  </h2>
+  <div class="wavy">
+    <span >#</span>
+    <span>k</span>
+    <span>o</span>
+    <span>b</span>
+    <span>u</span>
+    <span>k</span>
+    <span>o</span>
+    <span>v</span>
+    <span>u</span>
   </div>
-  <div id="navbar">
-  	<ul>
-  		<li><a href="#">Home</a></li>
-  		<li><a href="#">HTML</a></li>
-  		<li><a href="#">CSS</a></li>
-  		<li><a href="#">JS</a></li>
-  		<li><a href="#">Project</a></li>
-    </ul>
-  </div>
-    <h1>1911213 | Phan Thị Hoài Thương</h1>
+<div class="container">
+  <span class="text1">Welcome in</span>
+  <span class="text2">My website</span>
+</div>
+ 
+ <div class="menu">
+   <li><a href="index.html" class="cool-link">Home</a></li>
+   <li><a href="ex_html.html" class="cool-link">HTML</a></li>
+   <li><a href="#" class="cool-link">CSS</a></li>
+   <li><a href="#" class="cool-link">JS</a></li>
+   <li><a href="#" class="cool-link">Project</a></li>
+ </div> 
 
-    <h2>Lab Domain name/Hosing</h2>
-    <ul>
-      <li><a href="https://docs.google.com/document/d/1KntCP7USZoiYHaG2anx36jwmpk3fLnPLXX614EzkgdA/edit" target="_blank"> Lab 1 - Lab9 </a></li>
-    </ul>
+ <ul class="sci">
+   <li><a href="https://www.facebook.com/profile.php?id=100009683530046"><i class="fab fa-facebook-f"></i></a> </li>
+   <li><a href="https://www.instagram.com/_tipth/"><i class="fab fa-instagram"></i></a></li>
+   <li><a href="https://github.com/Hoaithuong1510"><i class="fab fa-github"></i></a></li>
+  <li> <a href="mailto:1911213@dlu.edu.vn"><i class="fas fa-envelope"></i></a></li>
 
-    <h2>Bai lab ve HTML</h2>
-
-    <h3>Chương 4</h3>
-    <ul>
-      <li><a href="labs/HTML/exercise 4-1/index.html" target="_blank"> Exercise 4-1 </a></li>
-      <li><a href="labs/HTML/exercise 4-2/index.html" target="_blank"> Exercise 4-2 </a></li>
-      <li><a href="labs/HTML/exercise 4-3/index.html" target="_blank"> Exercise 4-3 </a></li>
-      <li><a href="labs/HTML/exercise 4-4/index.html" target="_blank"> Exercise 4-4 </a></li>
-    </ul>
-
-    <h3>Chương 5</h3>
-    <ul>
-      <li><a href="labs/HTML/exercise 5-1/index.html" target="_blank"> Exercise 5-1 </a></li>
-      <li><a href="labs/HTML/exercise 5-2/index.html" target="_blank"> Exercise 5-2 </a></li>
-      <li><a href="labs/HTML/exercise 5-3/index.html" target="_blank"> Exercise 5-3 </a></li>
-    </ul>
-
-    <h3>Chương 6</h3>
-    <ul>
-      <li><a href="labs/HTML/exercise 6-1 to 6-7/jenskitchen/index.html" target="_blank"> Exercise 6-1 to 6-7</a></li>
-      <li><a href="labs/HTML/exercise 6-8/materials/glossary.html" target="_blank"> Exercise 6-8 </a></li>
-    </ul>
-
-    <h3>Chương 7</h3>
-    <ul>
-      <li><a href="labs/HTML/exercise 7-1/tuscany/index.html" target="_blank"> Exercise 7-1 </a></li>
-    </ul>
-
-    <h3>Chương 8</h3>
-    <ul>
-      <li><a href="labs/HTML/exercise 8-1/simple table.html" target="_blank"> Exercise 8-1 </a></li>
-      <li><a href="labs/HTML/exercise 8-2/Column spans.html" target="_blank"> Exercise 8-2 </a></li>
-      <li><a href="labs/HTML/exercise 8-3/Row spans.html" target="_blank"> Exercise 8-3 </a></li>
-      <li><a href="labs/HTML/exercise 8-4/table.html" target="_blank"> Exercise 8-4 </a></li>
-    </ul>
-
-    <h3>Chương 9</h3>
-    <ul>
-      <li><a href="labs/HTML/exercise 9-1 to 9-4/contest_entry.html" target="_blank"> Exercise 9-1 to 9-4</a></li>
-    </ul>
-
-    <h2>Bai lab ve CSS</h2>
-
-    <h3>Chương 11</h3>
-    <ul>
-      <li><a href="labs/CSS/exercise 11-1/twenties.html" target="_blank"> Exercise 11-1 </a></li>
-      <li><a href="labs/CSS/exercise 11-2/twenties.html" target="_blank"> Exercise 11-2 </a></li>
-    </ul>
-
-     <h3>Chương 12</h3>
-    <ul>
-      <li><a href="labs/CSS/exercise 12-1/menu.html" target="_blank"> Exercise 12-1 </a></li>
-      <li><a href="labs/CSS/exercise 12-2/menu.html" target="_blank"> Exercise 12-2 </a></li>
-      <li><a href="labs/CSS/exercise 12-3/menu.html" target="_blank"> Exercise 12-3 </a></li>
-      <li><a href="labs/CSS/exercise 12-4/menu.html" target="_blank"> Exercise 12-4 </a></li>
-      <li><a href="labs/CSS/exercise 12-5/menu.html" target="_blank"> Exercise 12-5 </a></li>
-      <li><a href="labs/CSS/exercise 12-6/menu.html" target="_blank"> Exercise 12-6 </a></li>
-      <li><a href="labs/CSS/exercise 12-7/menu.html" target="_blank"> Exercise 12-7 </a></li>
-    </ul>
-
-    <h3>Chương 13</h3>
-    <ul>
-      <li><a href="labs/CSS/exercise 13-1/bistro.html" target="_blank"> Exercise 13-1 </a></li>
-      <li><a href="labs/CSS/exercise 13-2/bistro.html" target="_blank"> Exercise 13-2 </a></li>
-      <li><a href="labs/CSS/exercise 13-3/bistro.html" target="_blank"> Exercise 13-3 </a></li>
-      <li><a href="labs/CSS/exercise 13-4/bistro.html" target="_blank"> Exercise 13-4 </a></li>
-      <li><a href="labs/CSS/exercise 13-4/bistro_.html" target="_blank"> Exercise 13-4b</a></li>
-      <li><a href="labs/CSS/exercise 13-5/bistro.html" target="_blank"> Exercise 13-5 </a></li>
-      <li><a href="labs/CSS/exercise 13-6/bistro.html" target="_blank"> Exercise 13-6 </a></li>
-      <li><a href="labs/CSS/exercise 13-7/bistro.html" target="_blank"> Exercise 13-7 </a></li>
-      <li><a href="labs/CSS/exercise 13-8/bistro.html" target="_blank"> Exercise 13-8 </a></li>
-    </ul>
-    
-    <h3>Chương 14</h3>
-    <ul>
-    	<li><a href="labs/CSS/exercise 14-1/jenware.html" target="_blank"> Exercise 14-1 </a></li>
-    	<li><a href="labs/CSS/exercise 14-2/jenware.html" target="_blank"> Exercise 14-2 </a></li>
-    	<li><a href="labs/CSS/exercise 14-3/jenware.html" target="_blank"> Exercise 14-3 </a></li>
-    </ul>
-
-    <h3>Chương 15</h3>
-    <ul>
-      <li><a href="labs/CSS/exercise 15-1/jenware.html" target="_blank"> Exercise 15-1 </a></li>
-      <li><a href="labs/CSS/exercise 15-2/jenware.html" target="_blank"> Exercise 15-2 </a></li>
-      <li><a href="labs/CSS/exercise 15-3/jenware.html" target="_blank"> Exercise 15-3 </a></li>
-      <li><a href="labs/CSS/exercise 15-4/jenware.html" target="_blank"> Exercise 15-4 </a></li>
-      <li><a href="labs/CSS/exercise 15-5/jenware.html" target="_blank"> Exercise 15-5 </a></li>
-    </ul>
-
-    <h2>Mini Project</h2>
-    <ul>
-    	<li><a href="mini project/mini project 1/index.html" target="_blank"> Mini Project 1</a></li>
-    </ul>
-    <p id="copyright">All content copyright &copy; Hoai Thuong.</p>
-  </body>
+ </ul>
+</body>
 </html>
