--- a/ex_html.html
+++ b/ex_html.html
@@ -117,6 +117,8 @@
      </div>
    </div>
 </div>
+  <p id="copyright">All content copyright &copy; Hoai Thuong.</p>
+
 <script src="source\swiper.min.js"></script>
  <script>
     var swiper = new Swiper('.swiper-container', {
@@ -136,5 +138,6 @@
       },
     });
   </script>
+
  </body>
  </html>
