--- a/index.html
+++ b/index.html
@@ -3,7 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <title>Web Design</title>
-    
+    <meta name="viewport" content="width=device-width, initial-scale=1, minimum-scale=1, maximum-scale=1">
+
     <link rel="stylesheet" href="source\app.css">
     <link rel="stylesheet" href="source\swiper.min.css">
    <link href="source\fontawesome-free-5.13.0-web\css\all.css" rel="stylesheet">
@@ -49,5 +50,6 @@
   <li> <a href="mailto:1911213@dlu.edu.vn"><i class="fas fa-envelope"></i></a></li>
 
  </ul>
+  <p id="copyright">All content copyright &copy; Hoai Thuong.</p>
 </body>
 </html>
