--- a/ex_html.html
+++ b/ex_html.html
@@ -19,7 +19,7 @@
     <span>I</span>
   </h2>
   <div class="wavy">
-    <span >#</span>
+    <span>#</span>
     <span>k</span>
     <span>o</span>
     <span>b</span>
@@ -32,7 +32,7 @@
   <div class="menu">
    <li><a href="index.html" class="cool-link">Home</a></li>
    <li><a href="ex_html.html" class="cool-link">HTML</a></li>
-   <li><a href="#" class="cool-link">CSS</a></li>
+   <li><a href="ex_css.html" class="cool-link">CSS</a></li>
    <li><a href="#" class="cool-link">JS</a></li>
    <li><a href="#" class="cool-link">Project</a></li>
  </div> 
@@ -117,7 +117,6 @@
      </div>
    </div>
 </div>
-  <p id="copyright">All content copyright &copy; Hoai Thuong.</p>
 
 <script src="source\swiper.min.js"></script>
  <script>
