--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
  <div class="menu">
    <li><a href="index.html" class="cool-link">Home</a></li>
    <li><a href="ex_html.html" class="cool-link">HTML</a></li>
-   <li><a href="#" class="cool-link">CSS</a></li>
+   <li><a href="ex_css.html" class="cool-link">CSS</a></li>
    <li><a href="#" class="cool-link">JS</a></li>
    <li><a href="#" class="cool-link">Project</a></li>
  </div> 
