Bo sung thuoc tinh trang web

--- a/Mini Project 1.html
+++ b/Mini Project 1.html
@@ -30,11 +30,8 @@
     <span>v</span>
     <span>u</span>
   </div>
-<div class="container">
-  <span class="text1">Welcome in</span>
-  <span class="text2">My website</span>
-</div>
-<nav>
+
+  <nav>
    <a href="index.html" >Home</a>
    <a href="ex_html.html">HTML</a>
    <a href="ex_css.html">CSS</a>
@@ -50,6 +47,11 @@
   <li> <a href="mailto:1911213@dlu.edu.vn"><i class="fas fa-envelope"></i></a></li>
 
  </ul>
-  <p id="copyright">All content copyright &copy; Hoai Thuong.</p>
+ <div class="middle">
+   <a href="mini project\mini project 1\index.html" class="btn btn1">Mini Project 1</a>
+   <a href="" class="btn btn2">Mini Project 2</a>
+   <a href="" class="btn btn3">Mini Project 3</a>
+   <a href="" class="btn btn4">Mini Project 4</a>
+ </div>
 </body>
 </html>
