--- a/ex_html.html
+++ b/ex_html.html
@@ -29,13 +29,14 @@
     <span>v</span>
     <span>u</span>
   </div>
-  <div class="menu">
-   <li><a href="index.html" class="cool-link">Home</a></li>
-   <li><a href="ex_html.html" class="cool-link">HTML</a></li>
-   <li><a href="ex_css.html" class="cool-link">CSS</a></li>
-   <li><a href="#" class="cool-link">JS</a></li>
-   <li><a href="#" class="cool-link">Project</a></li>
- </div> 
+  <nav>
+   <a href="index.html" >Home</a>
+   <a href="ex_html.html">HTML</a>
+   <a href="ex_css.html">CSS</a>
+   <a href="#" >JS</a>
+   <a href=" Mini Project 1.html">Project</a>
+  <div class="line"></div>
+  </nav>
 
  <ul class="sci">
    <li><a href="https://www.facebook.com/profile.php?id=100009683530046"><i class="fab fa-facebook-f"></i></a> </li>
