Sua chu in -> to

--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
     <span>u</span>
   </div>
 <div class="container">
-  <span class="text1">Welcome in</span>
+  <span class="text1">Welcome to</span>
   <span class="text2">My website</span>
 </div>
 <nav>
