Bo sung chuong 17

--- a/Mini Project 1.html
+++ b/Mini Project 1.html
@@ -32,11 +32,13 @@
   </div>
 
   <nav>
-   <a href="index.html" >Home</a>
-   <a href="ex_html.html">HTML</a>
-   <a href="ex_css.html">CSS</a>
-   <a href="#" >JS</a>
-   <a href=" Mini Project 1.html">Project</a>
+   <ul>
+   <li><a href="index.html" >Home</a></li>
+  <li><a href="ex_html.html">HTML</a></li>
+  <li></li> <a href="ex_css.html">CSS</a></li>
+  <li></li><a href="ex_js.html" >JS</a></li>
+  <li><a href=" Mini Project 1.html">Project</a></li>
+  </ul>
   <div class="line"></div>
   </nav>
 
