--- a/index.html
+++ b/index.html
@@ -4,11 +4,11 @@
     <meta charset="UTF-8">
     <title>Web Design</title>
     <meta name="viewport" content="width=device-width, initial-scale=1, minimum-scale=1, maximum-scale=1">
-
+    <meta name=”viewport” content=”width=device-width, initial-scale=1.0″> 
     <link rel="stylesheet" href="source\app.css">
     <link rel="stylesheet" href="source\swiper.min.css">
    <link href="source\fontawesome-free-5.13.0-web\css\all.css" rel="stylesheet">
-
+   <script src="https://kit.fontawesome.com/a076d05399.js"></script>
 </head>
 <body>
   <h2>
@@ -35,12 +35,18 @@
   <span class="text2">My website</span>
 </div>
 <nav>
-   <a href="index.html" >Home</a>
-   <a href="ex_html.html">HTML</a>
-   <a href="ex_css.html">CSS</a>
-   <a href="#" >JS</a>
-   <a href=" Mini Project 1.html">Project</a>
-  <div class="line"></div>
+  <input type="checkbox" id="check">
+  <label for="check" class="checkbtn">
+    <i class="fas fa-bars"></i>
+  </label>
+  <ul>
+   <li><a class="active" href="index.html" >Home</a></li>
+  <li><a href="ex_html.html">HTML</a></li>
+  <li> <a href="ex_css.html">CSS</a></li>
+  <li><a href="ex_js.html" >JS</a></li>
+  <li><a href=" Mini Project 1.html">Project</a></li>
+  </ul>
+  
   </nav>
 
  <ul class="sci">
@@ -50,6 +56,6 @@
   <li> <a href="mailto:1911213@dlu.edu.vn"><i class="fas fa-envelope"></i></a></li>
 
  </ul>
-  <p id="copyright">All content copyright &copy; Hoai Thuong.</p>
+  <p id="copyright"> &copy; Copyright 2020 by Hoai Thuong</p>
 </body>
 </html>
