--- a/ex_css.html
+++ b/ex_css.html
@@ -32,11 +32,13 @@
   </div>
  
 <nav>
-   <a href="index.html" >Home</a>
-   <a href="ex_html.html">HTML</a>
-   <a href="ex_css.html">CSS</a>
-   <a href="#" >JS</a>
-   <a href=" Mini Project 1.html">Project</a>
+  <ul>
+   <li><a href="index.html" >Home</a></li>
+  <li><a href="ex_html.html">HTML</a></li>
+  <li></li> <a href="ex_css.html">CSS</a></li>
+  <li></li><a href="ex_js.html" >JS</a></li>
+  <li><a href=" Mini Project 1.html">Project</a></li>
+  </ul>
   <div class="line"></div>
   </nav>
 
@@ -55,8 +57,8 @@
                   <h2>Chapter 11</h2>
              </div>
                 <div class="purport">
-                <li><a href="labs/HTML/exercise 11-1/twenties.html"> Exercise 11-1 </a></li>
-                <li><a href="labs/HTML/exercise 11-2/twenties.html"> Exercise 11-2 </a></li>
+                <li><a href="labs/CSS/exercise 11-1/twenties.html"> Exercise 11-1 </a></li>
+                <li><a href="labs/CSS/exercise 11-2/twenties.html"> Exercise 11-2 </a></li>
             </div>
         </div>
     </div>
@@ -66,13 +68,13 @@
                   <h2>Chapter 12</h2>
              </div>
                 <div class="purport">
-                <li><a href="labs/HTML/exercise 12-1/menu.html"> Exercise 12-1 </a></li>
-                <li><a href="labs/HTML/exercise 12-2/menu.html"> Exercise 12-2 </a></li>
-                <li><a href="labs/HTML/exercise 12-3/menu.html"> Exercise 12-3 </a></li>
-                <li><a href="labs/HTML/exercise 12-4/menu.html"> Exercise 12-4 </a></li>
-                <li><a href="labs/HTML/exercise 12-5/menu.html"> Exercise 12-5 </a></li>
-                <li><a href="labs/HTML/exercise 12-6/menu.html"> Exercise 12-6 </a></li>
-                <li><a href="labs/HTML/exercise 12-7/menu.html"> Exercise 12-7 </a></li>
+                <li><a href="labs/CSS/exercise 12-1/menu.html"> Exercise 12-1 </a></li>
+                <li><a href="labs/CSS/exercise 12-2/menu.html"> Exercise 12-2 </a></li>
+                <li><a href="labs/CSS/exercise 12-3/menu.html"> Exercise 12-3 </a></li>
+                <li><a href="labs/CSS/exercise 12-4/menu.html"> Exercise 12-4 </a></li>
+                <li><a href="labs/CSS/exercise 12-5/menu.html"> Exercise 12-5 </a></li>
+                <li><a href="labs/CSS/exercise 12-6/menu.html"> Exercise 12-6 </a></li>
+                <li><a href="labs/CSS/exercise 12-7/menu.html"> Exercise 12-7 </a></li>
             </div>
             </div>
      </div>
@@ -82,14 +84,14 @@
                   <h2>Chapter 13</h2>
              </div>
             <div class="purport">
-                <li><a href="labs/HTML/exercise 13-1/bistro.html"> Exercise 13-1</a></li>
-                <li><a href="labs/HTML/exercise 13-2/bistro.html"> Exercise 13-2</a></li>
-                <li><a href="labs/HTML/exercise 13-3/bistro.html"> Exercise 13-3</a></li>
-                <li><a href="labs/HTML/exercise 13-4/bistro_.html"> Exercise 13-4</a></li>
-                <li><a href="labs/HTML/exercise 13-5/bistro.html"> Exercise 13-5</a></li>
-                <li><a href="labs/HTML/exercise 13-6/bistro.html"> Exercise 13-6</a></li>
-                <li><a href="labs/HTML/exercise 13-7/bistro.html"> Exercise 13-7</a></li>
-                <li><a href="labs/HTML/exercise 13-8/bistro.html"> Exercise 13-8</a></li>
+                <li><a href="labs/CSS/exercise 13-1/bistro.html"> Exercise 13-1</a></li>
+                <li><a href="labs/CSS/exercise 13-2/bistro.html"> Exercise 13-2</a></li>
+                <li><a href="labs/CSS/exercise 13-3/bistro.html"> Exercise 13-3</a></li>
+                <li><a href="labs/CSS/exercise 13-4/bistro_.html"> Exercise 13-4</a></li>
+                <li><a href="labs/CSS/exercise 13-5/bistro.html"> Exercise 13-5</a></li>
+                <li><a href="labs/CSS/exercise 13-6/bistro.html"> Exercise 13-6</a></li>
+                <li><a href="labs/CSS/exercise 13-7/bistro.html"> Exercise 13-7</a></li>
+                <li><a href="labs/CSS/exercise 13-8/bistro.html"> Exercise 13-8</a></li>
             </div>
         </div>
     </div>
@@ -99,9 +101,9 @@
                   <h2>Chapter 14</h2>
              </div>
             <div class="purport">
-                <li><a href="labs/HTML/exercise 14-1/jenware.html"> Exercise 14-1 </a></li>
-                <li><a href="labs/HTML/exercise 14-2/jenware.html"> Exercise 14-2 </a></li>
-                <li><a href="labs/HTML/exercise 14-3/jenware.html"> Exercise 14-3 </a></li>
+                <li><a href="labs/CSS/exercise 14-1/jenware.html"> Exercise 14-1 </a></li>
+                <li><a href="labs/CSS/exercise 14-2/jenware.html"> Exercise 14-2 </a></li>
+                <li><a href="labs/CSS/exercise 14-3/jenware.html"> Exercise 14-3 </a></li>
             </div>
         </div>
         </div>
@@ -111,11 +113,11 @@
                   <h2>Chapter 15</h2>
              </div>
             <div class="purport">
-                <li><a href="labs/HTML/exercise 15-1/jenware.html"> Exercise 15-1</a></li>
-                <li><a href="labs/HTML/exercise 15-2/jenware.html"> Exercise 15-2</a></li>
-                <li><a href="labs/HTML/exercise 15-3/jenware.html"> Exercise 15-3</a></li>
-                <li><a href="labs/HTML/exercise 15-4/jenware.html"> Exercise 15-4</a></li>
-                <li><a href="labs/HTML/exercise 15-5/jenware.html"> Exercise 15-5</a></li>
+                <li><a href="labs/CSS/exercise 15-1/jenware.html"> Exercise 15-1</a></li>
+                <li><a href="labs/CSS/exercise 15-2/jenware.html"> Exercise 15-2</a></li>
+                <li><a href="labs/CSS/exercise 15-3/jenware.html"> Exercise 15-3</a></li>
+                <li><a href="labs/CSS/exercise 15-4/jenware.html"> Exercise 15-4</a></li>
+                <li><a href="labs/CSS/exercise 15-5/jenware.html"> Exercise 15-5</a></li>
             </div>
         </div>
     </div>
@@ -125,8 +127,8 @@
                   <h2>Chapter 16</h2>
              </div>
             <div class="purport">
-                <li><a href="labs/HTML/exercise 16-1/mountolympus.html"> Exercise 16-1 </a></li>
-                <li><a href="labs/HTML/exercise 16-2/mountolympus.html"> Exercise 16-2 </a></li>
+                <li><a href="labs/CSS/exercise 16-1/mountolympus.html"> Exercise 16-1 </a></li>
+                <li><a href="labs/CSS/exercise 16-2/mountolympus.html"> Exercise 16-2 </a></li>
             </div>
         </div>
     </div>
