Bo sung chuong 17

--- a/ex_css.html
+++ b/ex_css.html
@@ -131,6 +131,16 @@
                 <li><a href="labs/CSS/exercise 16-2/mountolympus.html"> Exercise 16-2 </a></li>
             </div>
         </div>
+         <div class="swiper-slide">
+        <div class="ticket">
+             <div class="sliderText">
+                  <h2>Chapter 16</h2>
+             </div>
+            <div class="purport">
+                <li><a href="labs/CSS/exercise 17-1/exercise1.html"> Exercise 17-1 </a></li>
+                <li><a href="labs/CSS/exercise 17-2/aquarium.html"> Exercise 17-2 </a></li>
+            </div>
+        </div>
     </div>
 </div>
 </div>
