Sua thanh tieu de

--- a/ex_css.html
+++ b/ex_css.html
@@ -32,14 +32,18 @@
   </div>
  
 <nav>
+  <input type="checkbox" id="check">
+  <label for="check" class="checkbtn">
+    <i class="fas fa-bars"></i>
+  </label>
   <ul>
-   <li><a href="index.html" >Home</a></li>
+   <li><a class="active" href="index.html" >Home</a></li>
   <li><a href="ex_html.html">HTML</a></li>
-  <li></li> <a href="ex_css.html">CSS</a></li>
-  <li></li><a href="ex_js.html" >JS</a></li>
+  <li> <a href="ex_css.html">CSS</a></li>
+  <li><a href="ex_js.html" >JS</a></li>
   <li><a href=" Mini Project 1.html">Project</a></li>
   </ul>
-  <div class="line"></div>
+  
   </nav>
 
  <ul class="sci">
