Tao trang web moi

--- a/ex_html.html
+++ b/ex_html.html
@@ -3,147 +3,100 @@
 <head>
     <meta charset="UTF-8">
     <title>Web Design</title>
-    <meta name="viewport" content="width=device-width, initial-scale=1, minimum-scale=1, maximum-scale=1">
-  <!-- Link Swiper's CSS -->
-    <link rel="stylesheet" href="source\swiper.min.css">
-    <link rel="stylesheet" href="source\app.css">
-    <link href="source\fontawesome-free-5.13.0-web\css\all.css" rel="stylesheet">
+    <link rel="stylesheet" type="text/css" href="style-html.css">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link href="https://fonts.googleapis.com/css2?family=DM+Mono:wght@300&family=Pangolin&display=swap" rel="stylesheet">
 </head>
 <body>
-  <h2>
-    <span>S</span>
-    <span>O</span>
-    <span>M</span>
-    <span>A</span>
-    <span>L</span>
-    <span>I</span>
-  </h2>
-  <div class="wavy">
-    <span>#</span>
-    <span>k</span>
-    <span>o</span>
-    <span>b</span>
-    <span>u</span>
-    <span>k</span>
-    <span>o</span>
-    <span>v</span>
-    <span>u</span>
-  </div>
-  <nav>
-  <input type="checkbox" id="check">
-  <label for="check" class="checkbtn">
-    <i class="fas fa-bars"></i>
-  </label>
-  <ul>
-   <li><a class="active" href="index.html" >Home</a></li>
-  <li><a href="ex_html.html">HTML</a></li>
-  <li> <a href="ex_css.html">CSS</a></li>
-  <li><a href="ex_js.html" >JS</a></li>
-  <li><a href=" Mini Project 1.html">Project</a></li>
-  </ul>
-  
-  </nav>
+    <div class="container">
+        <nav>
+            <input type="checkbox" id="nav" class="hidden">
+            <label for="nav" class="nav-btn">
+                <i></i>
+                <i></i>
+                <i></i>
+            </label>
+            <div class="logo">
+                <a href="">Hoai Thuong</a>
+            </div>
+            <div class="nav-wrapper">
+                <ul>
+                <li><a href="#">Home</a></li>
+                <li><a href="#">HTML</a></li>
+                <li><a href="#">CSS</a></li>
+                <li><a href="#">JS</a></li>   
+                <li><a href="#">Mini Project</a></li>    
+                </ul>
 
- <ul class="sci">
-   <li><a href="https://www.facebook.com/profile.php?id=100009683530046"><i class="fab fa-facebook-f"></i></a> </li>
-   <li><a href="https://www.instagram.com/_tipth/"><i class="fab fa-instagram"></i></a></li>
-   <li><a href="https://github.com/Hoaithuong1510"><i class="fab fa-github"></i></a></li>
-  <li> <a href="mailto:1911213@dlu.edu.vn"><i class="fas fa-envelope"></i></a></li>
-
- </ul>
-<div class="swiper-container">
-   <div class="swiper-wrapper">
-     <div class="swiper-slide">
-     <div class="card">
-       <div class="sliderText">
-        <h3>Chapter 4</h3>
-       </div>
-       <div class="content">
-            <li><a href="labs/HTML/exercise 4-1/index.html"> Exercise 4-1 </a></li>
-            <li><a href="labs/HTML/exercise 4-2/index.html"> Exercise 4-2 </a></li>
-            <li><a href="labs/HTML/exercise 4-3/index.html"> Exercise 4-3 </a></li>
-            <li><a href="labs/HTML/exercise 4-4/index.html"> Exercise 4-4 </a></li>
+            </div>
+              
+            </nav>
+        </nav>
+    </div>
+    <div class="testimonials">
+        <div class="card">
+            <div class="layer"></div>
+            <div class="content">
+                <li><a href="labs/HTML/exercise 4-1/index.html"> Exercise 4-1 </a></li>
+                <li><a href="labs/HTML/exercise 4-2/index.html"> Exercise 4-2 </a></li>
+                <li><a href="labs/HTML/exercise 4-3/index.html"> Exercise 4-3 </a></li>
+                <li><a href="labs/HTML/exercise 4-4/index.html"> Exercise 4-4 </a></li>
+            </div>
+           <div class="details">
+                <h2>Chapter 4</h2>
+            </div>
         </div>
-      </div>
-     </div>
-     <div class="swiper-slide">
-     <div class="card">
-       <div class="sliderText">
-        <h3>Chapter 5</h3>
-       </div>
-       <div class="content">
-            <li><a href="labs/HTML/exercise 5-1/index.html" target="_blank"> Exercise 5-1 </a></li>
-            <li><a href="labs/HTML/exercise 5-2/index.html" target="_blank"> Exercise 5-2 </a></li>
-            <li><a href="labs/HTML/exercise 5-3/index.html" target="_blank"> Exercise 5-3 </a></li>
+          <div class="card">
+            <div class="layer"></div>
+            <div class="content">
+                <li><a href="labs/HTML/exercise 5-1/index.html" target="_blank"> Exercise 5-1 </a></li>
+                <li><a href="labs/HTML/exercise 5-2/index.html" target="_blank"> Exercise 5-2 </a></li>
+                <li><a href="labs/HTML/exercise 5-3/index.html" target="_blank"> Exercise 5-3 </a></li>
+            </div>
+             <div class="details">
+                <h2>Chapter 5</h2>
+            </div>
         </div>
-      </div>
-     </div>
-     <div class="swiper-slide">
-     <div class="card">
-       <div class="sliderText">
-        <h3>Chapter 6</h3>
-       </div>
-       <div class="content">
-            <li><a href="labs/HTML/exercise 6-1 to 6-7/jenskitchen/index.html" target="_blank"> Exercise 6-1 to 6-7</a></li>
-            <li><a href="labs/HTML/exercise 6-8/materials/glossary.html" target="_blank"> Exercise 6-8 </a></li>
+          <div class="card">
+            <div class="layer"></div>
+            <div class="content">
+               <li><a href="labs/HTML/exercise 6-1 to 6-7/jenskitchen/index.html" target="_blank"> Exercise 6-1 to 6-7</a></li>
+               <li><a href="labs/HTML/exercise 6-8/materials/glossary.html" target="_blank"> Exercise 6-8 </a></li>
+            </div>
+             <div class="details">
+                <h2>Chapter 6</h2>
+            </div>
         </div>
-      </div>
-     </div>
-     <div class="swiper-slide">
-     <div class="card">
-       <div class="sliderText">
-        <h3>Chapter 7</h3>
-       </div>
-       <div class="content">
-            <li><a href="labs/HTML/exercise 7-1/tuscany/index.html" target="_blank"> Exercise 7-1 </a></li>
+          <div class="card">
+            <div class="layer"></div>
+            <div class="content">
+                 <li><a href="labs/HTML/exercise 7-1/tuscany/index.html" target="_blank"> Exercise 7-1 </a></li>
+            </div>
+             <div class="details">
+                <h2>Chapter 7</h2>
+            </div>
         </div>
-      </div>
-     </div>
-     <div class="swiper-slide">
-     <div class="card">
-       <div class="sliderText">
-        <h3>Chapter 8</h3>
-       </div>
-       <div class="content">
-            <li><a href="labs/HTML/exercise 8-1/simple table.html" target="_blank"> Exercise 8-1 </a></li>
-            <li><a href="labs/HTML/exercise 8-2/Column spans.html" target="_blank"> Exercise 8-2 </a></li>
-            <li><a href="labs/HTML/exercise 8-3/Row spans.html" target="_blank"> Exercise 8-3 </a></li>
-            <li><a href="labs/HTML/exercise 8-4/table.html" target="_blank"> Exercise 8-4 </a></li>
+          <div class="card">
+            <div class="layer"></div>
+            <div class="content">
+               <li><a href="labs/HTML/exercise 8-1/simple table.html" target="_blank"> Exercise 8-1 </a></li>
+              <li><a href="labs/HTML/exercise 8-2/Column spans.html" target="_blank"> Exercise 8-2 </a></li>
+              <li><a href="labs/HTML/exercise 8-3/Row spans.html" target="_blank"> Exercise 8-3 </a></li>
+              <li><a href="labs/HTML/exercise 8-4/table.html" target="_blank"> Exercise 8-4 </a></li>
+              </div>
+               <div class="details">
+                <h2>Chapter 8</h2>
+            </div>
         </div>
-      </div>
-     </div>
-     <div class="swiper-slide">
-     <div class="card">
-       <div class="sliderText">
-        <h3>Chapter 9</h3>
-       </div>
-       <div class="content">
-            <li><a href="labs/HTML/exercise 9-1 to 9-4/contest_entry.html" target="_blank"> Exercise 9-1 to 9-4</a></li>
+          <div class="card">
+            <div class="layer"></div>
+            <div class="content">
+           <li><a href="labs/HTML/exercise 9-1 to 9-4/contest_entry.html" target="_blank"> Exercise 9-1 to 9-4</a></li>
+            </div>
+             <div class="details">
+                <h2>Chapter 9</h2>
+            </div>
         </div>
-      </div>
-     </div>
-   </div>
-</div>
-
-<script src="source\swiper.min.js"></script>
- <script>
-    var swiper = new Swiper('.swiper-container', {
-      effect: 'coverflow',
-      grabCursor: true,
-      centeredSlides: true,
-      slidesPerView: 'auto',
-      coverflowEffect: {
-        rotate: 50,
-        stretch: 0,
-        depth: 100,
-        modifier: 1,
-        slideShadows : true,
-      },
-      pagination: {
-        el: '.swiper-pagination',
-      },
-    });
-  </script>
-
- </body>
- </html>
+    </div>
+    </body>
+</html>
