--- a/index.html
+++ b/index.html
@@ -3,59 +3,35 @@
 <head>
     <meta charset="UTF-8">
     <title>Web Design</title>
-    <meta name="viewport" content="width=device-width, initial-scale=1, minimum-scale=1, maximum-scale=1">
-    <meta name=”viewport” content=”width=device-width, initial-scale=1.0″> 
-    <link rel="stylesheet" href="source\app.css">
-    <link rel="stylesheet" href="source\swiper.min.css">
-   <link href="source\fontawesome-free-5.13.0-web\css\all.css" rel="stylesheet">
-   <script src="https://kit.fontawesome.com/a076d05399.js"></script>
+    <link rel="stylesheet" type="text/css" href="style.css">
+    <link href="https://fonts.googleapis.com/css2?family=DM+Mono:wght@300&family=Pangolin&display=swap" rel="stylesheet">
 </head>
 <body>
-  <h2>
-    <span>S</span>
-    <span>O</span>
-    <span>M</span>
-    <span>A</span>
-    <span>L</span>
-    <span>I</span>
-  </h2>
-  <div class="wavy">
-    <span >#</span>
-    <span>k</span>
-    <span>o</span>
-    <span>b</span>
-    <span>u</span>
-    <span>k</span>
-    <span>o</span>
-    <span>v</span>
-    <span>u</span>
-  </div>
-<div class="container">
-  <span class="text1">Welcome to</span>
-  <span class="text2">My website</span>
-</div>
-<nav>
-  <input type="checkbox" id="check">
-  <label for="check" class="checkbtn">
-    <i class="fas fa-bars"></i>
-  </label>
-  <ul>
-   <li><a class="active" href="index.html" >Home</a></li>
-  <li><a href="ex_html.html">HTML</a></li>
-  <li> <a href="ex_css.html">CSS</a></li>
-  <li><a href="ex_js.html" >JS</a></li>
-  <li><a href=" Mini Project 1.html">Project</a></li>
-  </ul>
-  
-  </nav>
+    <header>
+        <section class="navsection">
+            <div class="logo">
+                <h1>Hoai Thuong</h1>
+            </div>
+            <nav>
+                <a href="index.html">Home</a>
+                <a href="ex_html.html">HTML</a>
+                <a href="#">CSS</a>
+                <a href="#">JS</a>
+                <a href="#">Mini Project</a>
+            </nav>
+        </section>
+        <main>
+            <div class="leftside">
+                <h3>CTK43</h3>
+                <h1>Phan thi hoai thuong</h1>
+                <h2>1911213</h2>
+            </div>
 
- <ul class="sci">
-   <li><a href="https://www.facebook.com/profile.php?id=100009683530046"><i class="fab fa-facebook-f"></i></a> </li>
-   <li><a href="https://www.instagram.com/_tipth/"><i class="fab fa-instagram"></i></a></li>
-   <li><a href="https://github.com/Hoaithuong1510"><i class="fab fa-github"></i></a></li>
-  <li> <a href="mailto:1911213@dlu.edu.vn"><i class="fas fa-envelope"></i></a></li>
+            <div class="rightside">
+                <img src="images/banner.jpg">
 
- </ul>
-  <p id="copyright"> &copy; Copyright 2020 by Hoai Thuong</p>
+            </div>
+        </main>
+    </header>
 </body>
 </html>
