--- a/ex_html.html
+++ b/ex_html.html
@@ -21,9 +21,9 @@
             </div>
             <div class="nav-wrapper">
                 <ul>
-                <li><a href="#">Home</a></li>
-                <li><a href="#">HTML</a></li>
-                <li><a href="#">CSS</a></li>
+                <li><a href="index.html">Home</a></li>
+                <li><a href="ex_html.html">HTML</a></li>
+                <li><a href="ex_css.html">CSS</a></li>
                 <li><a href="#">JS</a></li>   
                 <li><a href="#">Mini Project</a></li>    
                 </ul>
