--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
             <nav>
                 <a href="index.html">Home</a>
                 <a href="ex_html.html">HTML</a>
-                <a href="#">CSS</a>
+                <a href="ex_css.html">CSS</a>
                 <a href="#">JS</a>
                 <a href="#">Mini Project</a>
             </nav>
