Sua bai tap chuong 16

--- a/ex_css.html
+++ b/ex_css.html
@@ -26,7 +26,7 @@
                               <li><a href="ex_html.html">HTML</a></li>
                               <li><a href="ex_css.html">CSS</a></li>
                               <li><a href="#">JS</a></li>
-                              <li><a href="#">Mini Project</a></li>
+                              <li><a href="miniproject.html">Mini Project</a></li>
                         </ul>
                   </div>
             </nav>
