--- a/labs/CSS/exercise 16-1/mountolympus.html
+++ b/labs/CSS/exercise 16-1/mountolympus.html
@@ -90,8 +90,9 @@ li {
 <div id="news">
 <h2>News</h2>
     <ul>
-        <li><strong>Welcome to Hellenes.</strong><br /> Son of Prometheus escapes the great flood and creates a new society from tossed stones. <a href="foo">More...</a></li>
-        <li>Arachne loses weave-off; is changed into a spider. <a href="">More...</a></li>
+    <li><strong>Pandora opens the box!</strong><br /> Disease and sorrow released to plague mankind for eternity. <a href="foo">More...</a></li>
+    <li><strong>Welcome to Hellenes.</strong><br /> Son of Prometheus escapes the great flood and creates a new society from tossed stones. <a href="foo">More...</a></li>
+    <li><strong>A Tangled Web</strong><br /> Arachne loses weave-off; is changed into a spider. <a href="">More...</a></li>
     </ul>
 </div>
 <div id="footer">
