--- a/labs/CSS/exercise 16-2/mountolympus.html
+++ b/labs/CSS/exercise 16-2/mountolympus.html
@@ -16,25 +16,25 @@
 #links {
 	float: left;
 	width: 220px;
-	margin: 0 2.5% 0 0 ;
-	outline: 2px dashed #dd0009;
+	margin: 0 ;
 }
 #main {
 	float: left;
 	width: 400px;
-	margin: 0 2.5%;
-	outline: 2px dashed #0053ae;
+	margin: 0 ;
+	margin-left: 320px;
+	margin-right: 20px;
 	 }
 	 
 #news {
 	float: left;
 	width: 300px;
-	margin: 0 0 0 2.5% ;
-	outline: 2px dashed #009554;
+	margin: 0;
+	margin-left: -740px;
 }
 
 #footer {
-	clear: right; 
+	clear: left; 
 	padding: 15px;
 	background: #CCC;}
 body {
@@ -60,21 +60,6 @@ li {
 <div id="header">
 <h1>Mount Olympus News</h1>
 </div>
-<div id="links">
-<h2>Links to Stories</h2>
-	<ul id="stories">
-		<li><a href="#">Jupiter & His Mighty Company</a></li>
-		<li><a href="#">The Golden Age</a></li>
-		<li><a href="#">The Story of Prometheus</a></li>
-		<li><a href="#">The Flood</a></li>
-		<li><a href="#">The Story of Io</a></li>
-		<li><a href="#">The Wonderful Weaver</a></li>
-		<li><a href="#">Cadmus and Europa</a></li>
-		<li><a href="#">The Quest for Medusa's Head</a></li>
-		<li><a href="#">The Story of Atlanta</a></li>
-		<li><a href="#">The Horse and the Olive</a></li>
-	</ul>
-</div>
 
 <div id="main">
 <h2>Prometheus Heats Things Up</h2>
@@ -90,9 +75,25 @@ li {
 <div id="news">
 <h2>News</h2>
     <ul>
-        <li><strong>Welcome to Hellenes.</strong><br /> Son of Prometheus escapes the great flood and creates a new society from tossed stones. <a href="foo">More...</a></li>
-        <li>Arachne loses weave-off; is changed into a spider. <a href="">More...</a></li>
+    <li><strong>Pandora opens the box!</strong><br /> Disease and sorrow released to plague mankind for eternity. <a href="foo">More...</a></li>
+    <li><strong>Welcome to Hellenes.</strong><br /> Son of Prometheus escapes the great flood and creates a new society from tossed stones. <a href="foo">More...</a></li>
+    <li><strong>A Tangled Web</strong><br /> Arachne loses weave-off; is changed into a spider. <a href="">More...</a></li>
     </ul>
+</div>
+<div id="links">
+<h2>Links to Stories</h2>
+	<ul id="stories">
+		<li><a href="#">Jupiter & His Mighty Company</a></li>
+		<li><a href="#">The Golden Age</a></li>
+		<li><a href="#">The Story of Prometheus</a></li>
+		<li><a href="#">The Flood</a></li>
+		<li><a href="#">The Story of Io</a></li>
+		<li><a href="#">The Wonderful Weaver</a></li>
+		<li><a href="#">Cadmus and Europa</a></li>
+		<li><a href="#">The Quest for Medusa's Head</a></li>
+		<li><a href="#">The Story of Atlanta</a></li>
+		<li><a href="#">The Horse and the Olive</a></li>
+	</ul>
 </div>
 <div id="footer">
     <p>Content taken from <cite>Old Greek Stories</cite> by James Baldwin (1914). It is a copyright free text available at <a href="http://www.gutenberg.net/1/1/5/8/11582/">Project Gutenberg</a>.</p>
