Sua lai trang html

--- a/ex_html.html
+++ b/ex_html.html
@@ -5,7 +5,8 @@
     <title>Web Design</title>
     <link rel="stylesheet" type="text/css" href="style-html.css">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link href="https://fonts.googleapis.com/css2?family=DM+Mono:wght@300&family=Pangolin&display=swap" rel="stylesheet">
+      <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:ital,wght@1,500&display=swap" rel="stylesheet">
+ <link href="https://fonts.googleapis.com/css2?family=Indie+Flower&display=swap" rel="stylesheet">
 </head>
 <body>
     <div class="container">
@@ -35,66 +36,66 @@
     </div>
     <div class="testimonials">
         <div class="card">
-            <div class="layer"></div>
+             <div class="imgBx">
+                    <img src="images/a8.jpg" width="260px" height="260px">
+                </div>
             <div class="content">
+                 <h2>Chapter 4</h2>
                 <li><a href="labs/HTML/exercise 4-1/index.html"> Exercise 4-1 </a></li>
                 <li><a href="labs/HTML/exercise 4-2/index.html"> Exercise 4-2 </a></li>
                 <li><a href="labs/HTML/exercise 4-3/index.html"> Exercise 4-3 </a></li>
                 <li><a href="labs/HTML/exercise 4-4/index.html"> Exercise 4-4 </a></li>
             </div>
-           <div class="details">
-                <h2>Chapter 4</h2>
             </div>
-        </div>
           <div class="card">
-            <div class="layer"></div>
+               <div class="imgBx">
+                    <img src="images/a9.jpg" width="260px" height="260px">
+                </div>
             <div class="content">
+                 <h2>Chapter 5</h2>
                 <li><a href="labs/HTML/exercise 5-1/index.html" target="_blank"> Exercise 5-1 </a></li>
                 <li><a href="labs/HTML/exercise 5-2/index.html" target="_blank"> Exercise 5-2 </a></li>
                 <li><a href="labs/HTML/exercise 5-3/index.html" target="_blank"> Exercise 5-3 </a></li>
             </div>
-             <div class="details">
-                <h2>Chapter 5</h2>
-            </div>
         </div>
           <div class="card">
-            <div class="layer"></div>
+               <div class="imgBx">
+                    <img src="images/a10.jpg" width="260px" height="260px">
+                </div>
             <div class="content">
+                   <h2>Chapter 6</h2>
                <li><a href="labs/HTML/exercise 6-1 to 6-7/jenskitchen/index.html" target="_blank"> Exercise 6-1 to 6-7</a></li>
                <li><a href="labs/HTML/exercise 6-8/materials/glossary.html" target="_blank"> Exercise 6-8 </a></li>
             </div>
-             <div class="details">
-                <h2>Chapter 6</h2>
-            </div>
         </div>
           <div class="card">
-            <div class="layer"></div>
+               <div class="imgBx">
+                    <img src="images/a11.jpg" width="260px" height="260px">
+                </div>
             <div class="content">
+                    <h2>Chapter 7</h2>
                  <li><a href="labs/HTML/exercise 7-1/tuscany/index.html" target="_blank"> Exercise 7-1 </a></li>
             </div>
-             <div class="details">
-                <h2>Chapter 7</h2>
-            </div>
         </div>
           <div class="card">
-            <div class="layer"></div>
+               <div class="imgBx">
+                    <img src="images/a12.jpg" width="260px" height="260px">
+                </div>
             <div class="content">
+                <h2>Chapter 8</h2>
                <li><a href="labs/HTML/exercise 8-1/simple table.html" target="_blank"> Exercise 8-1 </a></li>
               <li><a href="labs/HTML/exercise 8-2/Column spans.html" target="_blank"> Exercise 8-2 </a></li>
               <li><a href="labs/HTML/exercise 8-3/Row spans.html" target="_blank"> Exercise 8-3 </a></li>
               <li><a href="labs/HTML/exercise 8-4/table.html" target="_blank"> Exercise 8-4 </a></li>
               </div>
-               <div class="details">
-                <h2>Chapter 8</h2>
-            </div>
         </div>
           <div class="card">
-            <div class="layer"></div>
+               <div class="imgBx">
+                    <img src="images/a13.jpg" width="260px" height="260px">
+                </div>
             <div class="content">
+             <h2>Chapter 9</h2>
            <li><a href="labs/HTML/exercise 9-1 to 9-4/contest_entry.html" target="_blank"> Exercise 9-1 to 9-4</a></li>
-            </div>
-             <div class="details">
-                <h2>Chapter 9</h2>
             </div>
         </div>
     </div>
