--- a/ex_html.html
+++ b/ex_html.html
@@ -53,9 +53,9 @@
                 </div>
             <div class="content">
                  <h2>Chapter 5</h2>
-                <li><a href="labs/HTML/exercise 5-1/index.html" target="_blank"> Exercise 5-1 </a></li>
-                <li><a href="labs/HTML/exercise 5-2/index.html" target="_blank"> Exercise 5-2 </a></li>
-                <li><a href="labs/HTML/exercise 5-3/index.html" target="_blank"> Exercise 5-3 </a></li>
+                <li><a href="labs/HTML/exercise 5-1/index.html" > Exercise 5-1 </a></li>
+                <li><a href="labs/HTML/exercise 5-2/index.html" > Exercise 5-2 </a></li>
+                <li><a href="labs/HTML/exercise 5-3/index.html" > Exercise 5-3 </a></li>
             </div>
         </div>
           <div class="card">
@@ -64,8 +64,8 @@
                 </div>
             <div class="content">
                    <h2>Chapter 6</h2>
-               <li><a href="labs/HTML/exercise 6-1 to 6-7/jenskitchen/index.html" target="_blank"> Exercise 6-1 to 6-7</a></li>
-               <li><a href="labs/HTML/exercise 6-8/materials/glossary.html" target="_blank"> Exercise 6-8 </a></li>
+               <li><a href="labs/HTML/exercise 6-1 to 6-7/jenskitchen/index.html" > Exercise 6-1 to 6-7</a></li>
+               <li><a href="labs/HTML/exercise 6-8/materials/glossary.html" > Exercise 6-8 </a></li>
             </div>
         </div>
           <div class="card">
@@ -74,7 +74,7 @@
                 </div>
             <div class="content">
                     <h2>Chapter 7</h2>
-                 <li><a href="labs/HTML/exercise 7-1/tuscany/index.html" target="_blank"> Exercise 7-1 </a></li>
+                 <li><a href="labs/HTML/exercise 7-1/tuscany/index.html"> Exercise 7-1 </a></li>
             </div>
         </div>
           <div class="card">
@@ -83,10 +83,10 @@
                 </div>
             <div class="content">
                 <h2>Chapter 8</h2>
-               <li><a href="labs/HTML/exercise 8-1/simple table.html" target="_blank"> Exercise 8-1 </a></li>
-              <li><a href="labs/HTML/exercise 8-2/Column spans.html" target="_blank"> Exercise 8-2 </a></li>
-              <li><a href="labs/HTML/exercise 8-3/Row spans.html" target="_blank"> Exercise 8-3 </a></li>
-              <li><a href="labs/HTML/exercise 8-4/table.html" target="_blank"> Exercise 8-4 </a></li>
+               <li><a href="labs/HTML/exercise 8-1/simple table.html" > Exercise 8-1 </a></li>
+              <li><a href="labs/HTML/exercise 8-2/Column spans.html"> Exercise 8-2 </a></li>
+              <li><a href="labs/HTML/exercise 8-3/Row spans.html"> Exercise 8-3 </a></li>
+              <li><a href="labs/HTML/exercise 8-4/table.html" > Exercise 8-4 </a></li>
               </div>
         </div>
           <div class="card">
@@ -95,7 +95,7 @@
                 </div>
             <div class="content">
              <h2>Chapter 9</h2>
-           <li><a href="labs/HTML/exercise 9-1 to 9-4/contest_entry.html" target="_blank"> Exercise 9-1 to 9-4</a></li>
+           <li><a href="labs/HTML/exercise 9-1 to 9-4/contest_entry.html"> Exercise 9-1 to 9-4</a></li>
             </div>
         </div>
     </div>
