Thay doi trang web

--- a/ex-js.html
+++ b/ex-js.html
@@ -4,6 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <link href="https://fonts.googleapis.com/css2?family=Merienda&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Gruppo&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Taviraj:ital,wght@1,300&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Caveat:wght@400;700&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Pacifico&display=swap" rel="stylesheet">
@@ -33,24 +35,33 @@
         </div>
         <img src="images/model.jpg" class="model" alt="model">
     </section>
-    <div class="box-container">
-        <div class="box-1">
-                    <span>HTML</span>
-                    <p class="heading"> Hypertext Markup Language</p>
-                    <p class="details">6 chapters <br> 25 exercises</p>
-                    <a href="ex-html.html">Read more</a>
+    <div class="card">
+       <div class="box">
+           <div class="imgBx">
+                <img src="images/a15.jpg"  width="300px" height="400px">
+           </div>
+           <div class="content">
+                 <h3>Chapter 1</h3>
+                <li><a href="labs/JS/Lab 01/index.html"> Lab 01 </a></li>
+            </div>
+            </div>
+       <div class="box">
+               <div class="imgBx">
+                    <img src="images/a16.jpg"  width="300px" height="400px">
+                </div>
+            <div class="content">
+                 <h3>Chapter 2</h3>
+                <li><a href="labs/JS/Lab 02/index.html" > Lab 02 </a></li>
+            </div>
         </div>
-        <div class="box-2">
-                    <span>CSS</span>
-                    <p class="heading"> Cascading Style Sheet</p>
-                    <p class="details">6 chapters <br> 24 exercises</p>
-                    <a href="ex-css.html">Read more</a>
-        </div>
-        <div class="box-3">
-                    <span>JS</span>
-                    <p class="heading"> Javascript</p>
-                    <p class="details">3 chapters <br>3 exercises</p>
-                    <a href="ex-js.html">Read more</a>
+          <div class="box">
+               <div class="imgBx">
+                    <img src="images/a17.jpg"  width="300px" height="400px">
+                </div>
+            <div class="content">
+                   <h3>Chapter 3</h3>
+               <li><a href="labs/JS/Lab 03/index.html" > Lab 03</a></li>
+            </div>
         </div>
     </div>
 <!--footer-->
@@ -63,7 +74,7 @@
        <a href="https://github.com/Hoaithuong1510"><i class="fab fa-github"></i></a>
        <a href="mailto:phanthihoaithuong1510@gmail.com"><i class="far fa-envelope"></i></a>
    </div>
-   <p class="copyright">  &copy;Copyright by Hoai Thuong</p>
+   <p class="copyright">Copyright by Hoai Thuong</p>
 </footer>
 <!--attached social bar-->
 <div class="a-social-b">
