Bo sung chuong 18

--- a/ex-css.html
+++ b/ex-css.html
@@ -120,6 +120,18 @@
                         <li><a href="labs/CSS/exercise 17-1/exercise1.html "> Exercise 17-1</a></li>
                         <li><a href="labs/CSS/exercise 17-2/aquarium.html "> Exercise 17-2</a></li>
                     </div>
+                    </div>
+                     <div class="box">
+                      <div class="imgBx">
+                    <img src="images/a18.jpg"  width="300px" height="400px">
+                </div>
+                    <div class="content">
+                        <h3>Chapter 18</h3>
+                        <li><a href="labs/CSS/exercise 18-1/jenware.html "> Exercise 18-1</a></li>
+                        <li><a href="labs/CSS/exercise 18-2/jenware.html "> Exercise 18-2</a></li>
+                        <li><a href="labs/CSS/exercise 18-3/jenware.html "> Exercise 18-3</a></li>
+                    </div>
+                    </div>
                 </div>
 
 <div class="a-social-b">
