Bo sung mini project

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
         <div class="text-container">
             <p>Phan Thi Hoai Thuong</p>
             <p>CTK43 - 1911213</p>
-            <p>Tong hop bai lab<br> mon thiet ke web</p>
+            <p>Tong hop bai lab mon thiet ke web</p>
         </div>
         <img src="images/model.jpg" class="model" alt="model">
     </section>
